--- a/templates/privacy_consent.html
+++ b/templates/privacy_consent.html
@@ -9,7 +9,7 @@
 <div class="row justify-content-center p-3">
     <div class="col-sm-6 col-xs-12 border-1 m-t-75 p-3">
         <div class="text-center">
-            <h2>Data Privacy Consent</h2>
+            <h2>Data Privacy Consent {{test}}</h2>
         </div>
         <div class="text-left p-3">
             <p>In submitting this form I agree to my details being used for the purposes of psychological test and analysis. The information will only be accessed by necessary
