--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -20,7 +20,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/nav-css.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/loginregister.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/myProfile.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/favicon.png' %}"/>
 
