--- a/accounts/templates/accounts/profile-edit.html
+++ b/accounts/templates/accounts/profile-edit.html
@@ -1,28 +1,20 @@
 {% extends 'accounts/base.html' %}
 {% load static %}
 
-{% block title %}My Profile{% endblock %}
+{% block title %}PSYTEST | Edit Profile{% endblock %}
 
 {% block content %}
 
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<div class="d-flex flex-column min-vh-100">
-    {% if messages %}
-    <div class="bg-danger text-white text-center">
-        {% for message in messages %}
-        {{message}}
-        {% endfor %}
-    </div>
-    {% endif %}
-    <main class="container-fluid">
-        <div class="d-flex justify-content-center">
-            <form method="post" class="p-4 border rounded-3 bg-light mt-5 col-sm-3 col-xs-6">
-                {% csrf_token %}
-                <h3 class="text-center color-teal mb-3">Profile Details</h3>
-                <hr>
-                <div class="form-group">
+<main class="container">
+    <div class="row justify-content-center">
+        <form method="post" class="p-4 border rounded-3 bg-light mt-5">
+            {% csrf_token %}
+            <h3 class="text-center color-teal mb-3">Edit Your Profile</h3>
+            <div class="row">
+                <div class="form-group col-xs-6 col-sm-6">
                     <div class="form-floating mb-3">
                         <input type="text" name="first_name" value="{{user.first_name}}" class="form-control"
                             placeholder="Type your first name" id="id_first_name" required>
@@ -30,7 +22,7 @@
                         {{form.first_name.errors}}
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group col-xs-6 col-sm-6">
                     <div class="form-floating mb-3">
                         <input type="text" name="last_name" value="{{user.last_name}}" class="form-control"
                             placeholder="Type your last name" id="id_last_name" required>
@@ -38,21 +30,30 @@
                         {{form.last_name.errors}}
                     </div>
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="row">
+                <div class="form-group col-xs-6 col-sm-6">
                     <div class="form-floating mb-3">
                         <input type="date" name="date_of_birth" class="form-control" id="id_date_of_birth"
                             value="{{user.profile.date_of_birth|date:'Y-m-d'}}" required>
                         <label for="id_date_of_birth">Birthdate</label>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group col-xs-6 col-sm-6">
                     <div class="form-floating mb-3">
-                        {{form.gender}}
+                        <select name="gender" class="form-select" id="id_gender">
+                            {% for x,gender in form.fields.gender.choices %}
+                            <option {% if initial.gender == gender %}  selected {% endif %} value="{{gender}}">
+                                {{gender}}
+                            </option>{% endfor %}
+                        </select>
                         <label for="id_gender">{{form.gender.label}}</label>
                         {{form.gender.errors}}
                     </div>
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="row">
+                <div class="form-group col-xs-6 col-sm-4">
                     <div class="form-floating mb-3">
                         <select name="department" class="form-select" id="id_department">
                         </select>
@@ -60,34 +61,26 @@
                         {{form.department.errors}}
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group col-xs-6 col-sm-4">
                     <div class="form-floating mb-3">
                         <select name="program" class="form-select" id="id_program">
                             <option value="">---------------------</option>
-                            <!--                                {% for prog in program %}-->
-                            <!--                                <option {% if initial.program.name == prog.name %} selected {% endif %} value="{{prog}}">-->
-                            <!--                                    {{prog.name}}-->
-                            <!--                                </option>-->
-                            <!--                                {% endfor %}-->
                         </select>
                         <label for="id_program">{{form.program.label}}</label>
                         {{form.program.errors}}
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group col-xs-6 col-sm-4">
                     <div class="form-floating mb-3">
                         <select name="year" class="form-select" id="id_year">
                             <option value="">---------------------</option>
-                            <!--                                {% for yr in year%}-->
-                            <!--                                <option {% if initial.year.name == yr.name %} selected {% endif %} value="{{yr}}">-->
-                            <!--                                    {{yr.name}}-->
-                            <!--                                </option>-->
-                            <!--                                {% endfor %}-->
                         </select>
                         <label for="id_year">{{form.year.label}}</label>
                         {{form.year.errors}}
                     </div>
                 </div>
+            </div>
+            <div class="visually-hidden">
                 <div class="form-group">
                     <div class="form-floating mb-3">
                         <input type="text" name="username" value="{{user.username}}" class="form-control"
@@ -108,19 +101,20 @@
                 <div class="visually-hidden">
                     {{form.is_superuser}}
                 </div>
-                <div class="row justify-content-around p-3 ">
-                    <a class="btn btn-primary btn-block mt-2" href="{% url 'password_reset' %}">Change Password</a>
-                    <button type="submit" class="btn btn-success btn-block mt-2">Update Profile</button>
+            </div>
+            <div class="d-flex justify-content-end align-items-center gap-3">
+                <div>
+                    <a class="link-teal mt-2" href="{% url 'password_reset' %}">Change password?</a>
                 </div>
-            </form>
-        </div>
-    </main>
-    <script>
-        {% include 'accounts/scripts/main.js' %}
+                <div class="p-auto">
+                    <button type="submit" class="btn btn-success m-auto">Save</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</main>
+<script>
+    {% include 'accounts/scripts/main.js' %}
 
-    </script>
-</div>
-<footer class="mt-auto">
-    {% include 'partials/footer.html' %}
-</footer>
+</script>
 {% endblock %}
