--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -67,7 +67,7 @@
                     <span style="font-size:small" class="color-teal d-none d-sm-inline" data-toggle="tooltip" title="{{request.user.email}}">{{request.user.email}}</span>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="{% url 'accounts:edit_user' user.id %}">Profile</a></li>
+                    <li><a class="dropdown-item" href="{% url 'accounts:profile'%}">Profile</a></li>
                     {% if request.user.is_superuser %}
                     <li><a class="dropdown-item" href="{% url 'administration:home' %}">Admin</a></li>
                     {% endif %}
